tests/interpreter/return-statement-expr-error.lox
fn f() {
    return x;
}
f();
